k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: geekclash
  labels:
    app: geekclash
